--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "NavMeshComponents"]
 	path = NavMeshComponents
 	url = https://github.com/Unity-Technologies/NavMeshComponents.git
+[submodule "2670Fall2018/Assets/NavMeshComponents"]
+	path = 2670Fall2018/Assets/NavMeshComponents
+	url = https://github.com/Unity-Technologies/NavMeshComponents.git
